--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <title>Watchit Marketplace</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <link rel="icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="icon192.png" />
 </head>
 
 <body>
