feat: add home slider

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
 
 <body>
     <!--Main wrapper-->
-    <main id="root"></main>
+    <main id="root" style="height: 100%; width: 100%"></main>
 </body>
 </html>
